# smith

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/smith/: __init__.py
src/smith/ch2_0_performance/: baseline.py  ch2_0_performance.py  performance1.py  performance2.py  performance3.py  performance4.py
src/smith/ch3_0_ddp/: comm.py  script.py
src/smith/ch3_1_fsdp/: transformer.py  use_deepspeed.py  wandb_utils.py
src/smith/ch4_0_memory/: transformer.py
src/smith/ch5_0_inference_perf/: kv_cache.py
tests/: test_basic.py
tests/smith/ch2_0_performance/: test_ch2_0_performance.py  test_performance1.py
