[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smith"
version = "0.0.1"
description = "Smith — small ML utilities"
readme = "README.md"
requires-python = ">=3.12,<4.0"
authors = [ { name = "maciejjaskowski" } ]
license = { text = "MIT" }

dependencies = [
  "torch",
  "datasets",
  "transformers",
  "pytest>=8.4.2",
  "wandb>=0.22.2",
  "beartype>=0.22.4",
  "jaxtyping==0.3.2",
  "einops>=0.8.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest"]
